--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "postappbackend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "install-server": "cd server && npm install",
+    "start-server": "cd server && node server.js"
   },
   "keywords": [],
   "author": "",
